# wordle-llm

./: .env.example  .gitignore  README.md  build_dataset.sh  init.sh  main.py  pyproject.toml  setup.sh
data/: README.md
data/processed/: grammar_metadata.json  historical_stats.json  rejected_plurals.txt
data/raw/: historical_stats.json
data/scripts/: build_dataset.py  build_test.py  build_train.py
data/test/: 3_to_4_steps.txt  4_to_5_steps.txt  5_or_more_steps.txt  future_words.txt  invalid.txt  test_data_summary.json
data/train/: train.txt  train_data_summary.json
wordle/: __init__.py  env.py  game.py  index.html  render.py  script.js  styles.css
wordle/assets/: styles.css  template.html
